tests/ui/typeck/conversion/explicit_conversion_from_storage_array_ref.sol
//@compile-flags: -Ztypeck
contract C {
    int[10] x;
    function f() public view {
        int[](x); //~ ERROR: invalid explicit type conversion
        int(x); //~ ERROR: invalid explicit type conversion
    }
}
